--- a/package/src/assets/scss/_variables.scss
+++ b/package/src/assets/scss/_variables.scss
@@ -64,8 +64,13 @@ $headings-font-weight: 600 !default;
 $card-border-width: 0 !default;
 $card-box-shadow: $box-shadow !default;
 $grid-gutter-width: 1.85rem !default;
+$card-bg: $white;
 
 $input-bg: $white !default;
+$list-group-bg:$white !default;
+$table-bg:$white !default;
+$dropdown-bg:$white !default;
+
 /*******************/
 // Theme btn
 /********************/
